# pico-gbprint

./: CMakeLists.txt  README.md
3dprinter/: nose.scad  nose_v6.stl
include/: gb_printer.h  globals.h  linkcable.h  mew.h  tusb_config.h
src/: gb_printer.c  linkcable.c  main.c  pico_gb_printer.c
